Bug 1103177 - When tabs are torn out, swap plugin widget parents. r=roc